# atlasutils

./: README.md  README.rst  requirements.txt  setup.cfg
atlasutils/: __main__.py  atlasutils.py  builders.py  registries.py  utils.py
tests/: test_atlasutils.py
