[metadata]
name = atlasutils
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = My awsome project with python
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    atlasutils
data_files =
    etc/atlasutils = etc/*

[entry_points]
console_scripts =
    atlasutils_cli = atlasutils.__main__:main
